修改实体类

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
 			<version>1.2.36</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
