文件上传与  右键菜单的实现

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.datasource.username=tr18lx
 spring.datasource.password=Si4NQUenUFfh9akl
 
 file.root.path=F:/OAFILE
+#支持多部分上传
+spring.http.multipart.enabled=true
+#将文件写入缓存
+spring.http.multipart.file-size-threshold=5MB
+#最大文件大小
+spring.http.multipart.max-file-size=50MB
+#最大请求大小,多文件同时上传情况
+spring.http.multipart.max-request-size=200MB
+#是否在文件或参数访问时立即解析请求
+spring.http.multipart.resolve-lazily=false
