--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,20 @@ spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp
 spring.datasource.username=tr18lx
 spring.datasource.password=Si4NQUenUFfh9akl
 
+#some file convert
+spring.http.multipart.enabled=true
+
+#write into cache
+spring.http.multipart.file-size-threshold=5MB
+
+#max file size
+spring.http.multipart.max-file-size=50MB
+
+#many file upload maxsize at one time
+spring.http.multipart.max-request-size=200MB
+
+# analysize request
+spring.http.multipart.resolve-lazily=false
+
 file.root.path=F:/OAFILE
+
