--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,4 +1,4 @@
-sysMenu.parent.NotNull=\u7236\u7EA7\u5143\u7D20\u4E0D\u80FD\u4E3A\u7A7A
-sysMenu.parent.Length=\u957F\u5EA6\u57285\u548C10\u4E4B\u95F4
-
-sysMenu.menuUrl.NotNull=\u94FE\u63A5\u4E0D\u80FD\u4E3A\u7A7A
+#sysMenu
+sysMenu.parent.NotNull=\u7236\u7EA7\u957F\u5EA6\u4E0D\u80FD\u4E3A\u7A7A
+sysMenu.parent.Length=\u957F\u5EA6\u5FC5\u987B\u57285\u548C10\u4E4B\u95F4
+sysMenu.menuUrl.NotNull=\u94FE\u63A5\u5730\u5740\u4E0D\u80FD\u4E3A\u7A7A
