文件同名处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,7 @@ spring.http.multipart.max-request-size=200MB
 # analysize request
 spring.http.multipart.resolve-lazily=false
 
+#zhx path
 file.root.path=F:/OAFILE
+
 
