--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8
+spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
 spring.datasource.username=tr18lx
 spring.datasource.password=Si4NQUenUFfh9akl
 
