--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp
 spring.datasource.username=tr18lx
 spring.datasource.password=Si4NQUenUFfh9akl
 
+
+img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
+
 #some file convert
 spring.http.multipart.enabled=true
 
