--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=Si4NQUenUFfh9akl
 
 img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
 
+attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
+
 #some file convert
 spring.http.multipart.enabled=true
 
