--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.stuxuhai/jpinyin -->
+		<!-- 导入Jpinyin；汉字转拼音的包 -->
+		<dependency>
+			<groupId>com.github.stuxuhai</groupId>
+			<artifactId>jpinyin</artifactId>
+			<version>1.1.8</version>
+		</dependency>
 		<!-- 发送邮件插件 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -64,14 +71,14 @@
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson -->
 		<dependency>
-		    <groupId>com.squareup.retrofit2</groupId>
-		    <artifactId>converter-gson</artifactId>
-		    <version>2.3.0</version>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>converter-gson</artifactId>
+			<version>2.3.0</version>
 		</dependency>
-			
+
 
 		<!-- 导入fastjson -->
 		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
