通讯录完成了

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp
 spring.datasource.username=tr18lx
 spring.datasource.password=Si4NQUenUFfh9akl
 
-
-img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
+#sj as rootpath
+#img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
+#soli as rootpath as img
+img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
 
 attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
