--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.username=tr18lx
 spring.datasource.password=Si4NQUenUFfh9akl
 
 #sj as rootpath
-#img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
+img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
 #soli as rootpath as img
-img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
+#img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
 
 attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
