--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<version>1.1.8</version>
 		</dependency>
 		<!-- 发送邮件插件 -->
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160810</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
