--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,21 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
 spring.datasource.username=tr18lx
 spring.datasource.password=Si4NQUenUFfh9akl
+#spring.datasource.url=jdbc:mysql://localhost:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 #sj as rootpath
-img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
+#img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
 #soli as rootpath as img
-#img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
+img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
 
-attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
+attachment.roopath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/attachment
+#attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
+#zhx path
+#file.root.path=F:/OAFILE
+file.root.path=/Users/luoxiang/git
 #some file convert
 spring.http.multipart.enabled=true
 
@@ -25,8 +32,7 @@ spring.http.multipart.max-request-size=200MB
 # analysize request
 spring.http.multipart.resolve-lazily=false
 
-#zhx path
-file.root.path=F:/OAFILE
+
 
 mybatis.mapper-locations=classpath*:/mappers/*.xml
 mybatis.type-aliases-package=cn.gson.oasys.model.entity
