--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,13 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #sj as rootpath
-#img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
+img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
 #soli as rootpath as img
-img.rootpath=/Users/luoxiang/git
+#img.rootpath=/Users/luoxiang/git
 #img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
 
-attachment.roopath=/Users/luoxiang/git
-#attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
+#attachment.roopath=/Users/luoxiang/git
+attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
 #zhx path
 #file.root.path=F:/OAFILE
