--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
-#spring.datasource.username=tr18lx
-#spring.datasource.password=Si4NQUenUFfh9akl
-spring.datasource.url=jdbc:mysql://localhost:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
+spring.datasource.username=tr18lx
+spring.datasource.password=Si4NQUenUFfh9akl
+#spring.datasource.url=jdbc:mysql://localhost:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 #sj as rootpath
 #img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
