--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,15 +9,17 @@ spring.datasource.password=root
 #sj as rootpath
 #img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
 #soli as rootpath as img
-img.rootpath=/Users/luoxiang/git
+#img.rootpath=/Users/luoxiang/git
 #img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
 
 attachment.roopath=/Users/luoxiang/git
 #attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
 #zhx path
-#file.root.path=F:/OAFILE
-file.root.path=/Users/luoxiang/git
+file.root.path=F:/OAFILE
+img.rootpath=F:/Java/oa_system/src/main/resources/static/images/attachment
+
+#file.root.path=/Users/luoxiang/git
 #some file convert
 spring.http.multipart.enabled=true
 
