--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ attachment.roopath=/Users/luoxiang/git
 #attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
 #zhx path
-#file.root.path=F:/OAFILE
-file.root.path=/Users/luoxiang/git
+file.root.path=F:/OAFILE
+#file.root.path=/Users/luoxiang/git
 #some file convert
 spring.http.multipart.enabled=true
 
