--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
-spring.datasource.username=tr18lx
-spring.datasource.password=Si4NQUenUFfh9akl
-#spring.datasource.url=jdbc:mysql://localhost:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
-#spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
+#spring.datasource.username=tr18lx
+#spring.datasource.password=Si4NQUenUFfh9akl
+spring.datasource.url=jdbc:mysql://localhost:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
 
 #sj as rootpath
-img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
+#img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
 #soli as rootpath as img
 #img.rootpath=/Users/luoxiang/git
 #img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
 
 #attachment.roopath=/Users/luoxiang/git
-attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
+#attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
 #zhx path
 file.root.path=F:/OAFILE
 img.rootpath=F:/Java/oa_system/src/main/resources/static/images/attachment
-
+attachment.roopath=F:/Java/oa_system/src/main/resources/static/images/attachment
 #file.root.path=/Users/luoxiang/git
 #some file convert
 spring.http.multipart.enabled=true
