--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,8 @@ attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
 #zhx path
 file.root.path=F:/OAFILE
-<<<<<<< HEAD
-=======
-img.rootpath=F:/Java/oa_system/src/main/resources/static/images/attachment
+#img.rootpath=F:/Java/oa_system/src/main/resources/static/images/attachment
 
->>>>>>> branch 'yqs' of https://git.oschina.net/aaluoxiang/oa_system.git
 #file.root.path=/Users/luoxiang/git
 #some file convert
 spring.http.multipart.enabled=true
