--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,29 @@
+server.port=8088
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://121.42.235.61:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
-#spring.datasource.username=tr18lx
-#spring.datasource.password=Si4NQUenUFfh9akl
-spring.datasource.url=jdbc:mysql://localhost:3306/tr18lx?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/oasys?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 
-#sj as rootpath
-#img.rootpath=D:/ggit/oa_system/src/main/resources/static/images/touxiang
-#soli as rootpath as img
-#img.rootpath=/Users/luoxiang/git
-#img.rootpath=/Users/luoxiang/git/lx/oa_system/src/main/resources/static/images/touxiang
 
-#attachment.roopath=/Users/luoxiang/git
-#attachment.roopath=D:/ggit/oa_system/src/main/resources/static/images/attachment
 
-#zhx path
-file.root.path=F:/OAFILE
-img.rootpath=F:/Java/oa_system/src/main/resources/static/images/attachment
-attachment.roopath=F:/Java/oa_system/src/main/resources/static/images/attachment
+#MacOS path
+#file.root.path=/Users/luoxiang/git/file
+#img.rootpath=/Users/luoxiang/git/img
+#attachment.roopath=/Users/luoxiang/git/attachment
 
-#file.root.path=/Users/luoxiang/git
+#Windows path
+file.root.path=D:/oasys/resources/static/file
+img.rootpath=D:/oasys/resources/static/images
+attachment.roopath=D:/oasys/resources/static/attachment
+
 #some file convert
 spring.http.multipart.enabled=true
-
 #write into cache
 spring.http.multipart.file-size-threshold=5MB
-
 #max file size
 spring.http.multipart.max-file-size=500MB
-
 #many file upload maxsize at one time
 spring.http.multipart.max-request-size=200MB
-
 # analysize request
 spring.http.multipart.resolve-lazily=false
 
