--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,14 @@ spring.datasource.password=root
 #attachment.roopath=/Users/luoxiang/git/attachment
 
 #Windows path
-file.root.path=D:/oasys/resources/static/file
-img.rootpath=D:/oasys/resources/static/images
-attachment.roopath=D:/oasys/resources/static/attachment
+#file.root.path=D:/oasys/resources/static/file
+#img.rootpath=D:/oasys/resources/static/images
+#attachment.roopath=D:/oasys/resources/static/attachment
+
+# 绝对路径
+file.root.path=E:/MyProjects/oa_system/src/main/resources/static/file
+img.rootpath=E:/MyProjects/oa_system/src/main/resources/static/images
+attachment.roopath=E:/MyProjects/oa_system/src/main/resources/static/attachment
 
 #some file convert
 spring.http.multipart.enabled=true
@@ -28,7 +33,7 @@ spring.http.multipart.max-request-size=200MB
 spring.http.multipart.resolve-lazily=false
 
 
-
+# mybatis 配置相关
 mybatis.mapper-locations=classpath*:/mappers/*.xml
 mybatis.type-aliases-package=cn.gson.oasys.model.entity
 
