修复文件上传路径问题以及注销记载登录日志bug问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.datasource.password=root
 #img.rootpath=D:/oasys/resources/static/images
 #attachment.roopath=D:/oasys/resources/static/attachment
 
-# ¾ø¶ÔÂ·¾¶
-file.root.path=E:/MyProjects/oa_system/src/main/resources/static/file
-img.rootpath=E:/MyProjects/oa_system/src/main/resources/static/images
-attachment.roopath=E:/MyProjects/oa_system/src/main/resources/static/attachment
+# ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½
+#file.root.path=E:/MyProjects/oa_system/src/main/resources/static/file
+#img.rootpath=E:/MyProjects/oa_system/src/main/resources/static/images
+#attachment.roopath=E:/MyProjects/oa_system/src/main/resources/static/attachment
 
 #some file convert
 spring.http.multipart.enabled=true
@@ -33,7 +33,7 @@ spring.http.multipart.max-request-size=200MB
 spring.http.multipart.resolve-lazily=false
 
 
-# mybatis ÅäÖÃÏà¹Ø
+# mybatis ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 mybatis.mapper-locations=classpath*:/mappers/*.xml
 mybatis.type-aliases-package=cn.gson.oasys.model.entity
 
