--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8088
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/oasys?useUnicode=true&amp;characterEncoding=UTF8?autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/oasys?autoReconnect=true&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 
